Bug #39538 Constraint violation in multi-row insert does not abort transaction